# model_re

./: .gitignore  pyproject.toml  train.out
src/: train.py
src/cv_research_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: dataset.py
src/model/: __init__.py  module.py  resnet.py  vit.py
src/tools/: visualize_pos_embed.py
